[package]
name = "rs-float2color"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [
    "cdylib",
]

[profile.release-wasm]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"

[dependencies]

[features]

wasm = []
